--- a/platform/android/app/src/main/cpp/CMakeLists.txt
+++ b/platform/android/app/src/main/cpp/CMakeLists.txt
@@ -6,8 +6,10 @@ cmake_minimum_required(VERSION 3.4.1)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 
 set(ANDROID_ROOT_FOLDER ../../../../../../)
-include_directories(${ANDROID_ROOT_FOLDER}/runtime/)
-file(GLOB runtime ${ANDROID_ROOT_FOLDER}/runtime/*/*.cpp)
+include_directories(${ANDROID_ROOT_FOLDER}/runtime/
+        ${ANDROID_ROOT_FOLDER}/platformDependent/android
+        )
+file(GLOB runtime ${ANDROID_ROOT_FOLDER}/runtime/*/*.cpp ${ANDROID_ROOT_FOLDER}/platformDependent/android/*.cpp)
 
 add_library(gl2jni SHARED
         GfxAndroid.cpp
